경북대 BE_김건 6주차 과제(1~3단계) (#137)
* 5주차 과제 복사

* refactor : uri 수정

* refactor : uri 수정

* refactor: 네이밍 변경

* refactor : CategoryResponse 구조변경

* refactor : Gift -> Product로 이름변경

* refactor : productResponse 리팩토리 및 디렉터리 이름 Gift->Product 로 변경

* refactor : OptionResonse , WishResponse 수정

* refactor : 코드 리포매팅

* refactor : OrderResponse 형식 변경

* refactor : 리팩터링

* refactor: 카카오 uri 수정

* refactor: ProductNotFoundException 추가

* refactor : 사용자 닉네임 추가

* refactor : 카카오 로그인 시 응답 헤더,바디 변경

* refactor : 인가코드 유효성 처리 변경

* refactor : ProductNotFoundException 수정

* refactor : Wish 추가할때 에러처리 수정

* refactor : Wish 삭제 로직 변경

* refactor : Wish 추가,수정,삭제 로직변경

* refactor : order 로직 변경

* refactor : 테스트 파라미터 수정

* refactor: getAuthcode 수정

* feat : 유저 Role 추가

* feat : 유저 Point 추가

* feat : CORS 설정

* feat : 포인트기능 추가

* feat : 포인트 관련 리팩토링

* refactor : 데이터 변경

* refactor : CategoryResponse.Info 순서변경

* refactor: 더미이미지 추가

* refactor: cors 설정변경

* refactor: 변수명 변경

* refactor: Option 받아오는 로직 수정

* refactor: cors 설정 변경

* refactor: cors 설정 변경

* refactor: 위시 삭제 로직 변경

* refactor: 더미 이미지 변경

* refactor: 더미 이미지 변경

* refactor: 더미 이미지 변경

* refactor: 더미데이터 변경

* refactor: 더미데이터 변경

* refactor: 더미데이터 변경

* refactor: 변수명 변경

* refactor: 더미데이터변경

* refactor: 더미데이터변경

* refactor: 더미데이터변경

* refactor: 더미데이터변경

* refactor: 리다이렉트 변경

* refactor: 리다이렉트 변경

* refactor: 카카오 로그인 수정

* feat : 배포 스크립트 추가

* refactor : 리포매팅

* refactor : Integer로 변경

* refactor : 인터셉터 OPTIONS 수정

* refactor : 문자열 유효성검사 NotBlank로 변경

* refactor : MessageService 로 분리

* refactor : Exception 수정