@@ -1,4 +1,4 @@
-package gift.model.gift;
+package gift.model.product;
 
 import gift.model.category.Category;
 import gift.model.option.Option;
@@ -9,7 +9,7 @@ import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-class GiftTest {
+class ProductTest {
 
     @Test
     void checkThrowExceptionContainsKakao() {
@@ -19,9 +19,9 @@ class GiftTest {
 
         Category category = new Category(10L, "test", "test", "test", "test");
         Option option1 = new Option(10L, "testOption", 1);
-        List<Option> option = Arrays.asList(option1);
+        List<Option> option = List.of(option1);
 
-        assertThatThrownBy(() -> new Gift(invalidName, price, imageUrl, category, option))
+        assertThatThrownBy(() -> new Product(invalidName, price, imageUrl, category, option))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("카카오 문구는 MD와 협의 후 사용가능합니다.");
     }
