@@ -1,9 +1,9 @@
 package gift.repository;
 
 import gift.model.category.Category;
-import gift.model.gift.Gift;
 import gift.model.option.Option;
-import gift.repository.gift.GiftRepository;
+import gift.model.product.Product;
+import gift.repository.product.ProductRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,16 +16,16 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
 @DataJpaTest
-class GiftRepositoryTest {
+class ProductRepositoryTest {
 
     @Autowired
-    private GiftRepository giftRepository;
+    private ProductRepository productRepository;
 
     @Test
     @DisplayName("상품이 조회가 잘 되는지 테스트")
     void testfindById() {
-        Gift gift = giftRepository.findById(1L).orElseThrow(IllegalArgumentException::new);
-        assertThat(gift.getName()).isEqualTo("coffee");
+        Product product = productRepository.findById(1L).orElseThrow(IllegalArgumentException::new);
+        assertThat(product.getName()).isEqualTo("coffee");
     }
 
     @Test
@@ -33,13 +33,13 @@ class GiftRepositoryTest {
     void testSave() {
         Category category = new Category(10L, "test", "test", "test", "test");
         Option option1 = new Option("testOption", 1);
-        List<Option> option = Arrays.asList(option1);
-        Gift gift = new Gift("test", 1000, "abc.jpg", category, option);
-        Gift actual = giftRepository.save(gift);
+        List<Option> option = List.of(option1);
+        Product product = new Product("test", 1000, "abc.jpg", category, option);
+        Product actual = productRepository.save(product);
 
         assertAll(
                 () -> assertThat(actual.getId()).isNotNull(),
-                () -> assertThat(actual.getName()).isEqualTo(gift.getName())
+                () -> assertThat(actual.getName()).isEqualTo(product.getName())
         );
     }
 
