@@ -1,10 +1,10 @@
 package gift.repository.order;
 
 import gift.model.category.Category;
-import gift.model.gift.Gift;
 import gift.model.option.Option;
 import gift.model.order.Order;
-import gift.repository.gift.GiftRepository;
+import gift.model.product.Product;
+import gift.repository.product.ProductRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -22,7 +22,7 @@ class OrderRepositoryTest {
     private OrderRepository orderRepository;
 
     @Autowired
-    private GiftRepository giftRepository;
+    private ProductRepository productRepository;
 
     @Test
     @DisplayName("주문정보가 잘 저장되는지 확인")
@@ -30,11 +30,11 @@ class OrderRepositoryTest {
         //given
         Category category = new Category(10L, "test", "test", "test", "test");
         Option option1 = new Option("testOption", 1);
-        List<Option> option = Arrays.asList(option1);
-        Gift gift = new Gift("test", 1000, "abc.jpg", category, option);
-        giftRepository.save(gift);
+        List<Option> option = List.of(option1);
+        Product product = new Product("test", 1000, "abc.jpg", category, option);
+        productRepository.save(product);
 
-        Order order = new Order(gift.getOptions().get(0),5,"testMessage");
+        Order order = new Order(product,product.getOptions().get(0), 5, "testMessage");
 
         //when
         Order savedOrder = orderRepository.save(order);
